--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require-dev": {
         "phpstan/phpstan": "^1.11",
         "phpstan/phpstan-phpunit": "^1.4",
-        "phpunit/phpunit": "^11.1.3"
+        "phpunit/phpunit": "^9.6.19 || ^10.5.20 || ^11.1.3"
     },
     "autoload": {
         "psr-4": {
