--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,10 +31,16 @@ jobs:
       - name: Install dependencies
         run: composer install --no-ansi --prefer-dist --no-progress --no-interaction
 
+      - name: Migrate phpunit XML configuration
+        if: matrix.php != '8.0'
+        continue-on-error: true
+        run: vendor/bin/phpunit --migrate-configuration
+
       - name: Run test suite
         run: vendor/bin/phpunit --coverage-clover=coverage.xml
 
       - name: Upload coverage to Codecov
+        if: matrix.php == '8.3'
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
