--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         "psr/log": "^3.0"
     },
     "require-dev": {
-        "phpstan/phpstan": "^1.12",
-        "phpstan/phpstan-phpunit": "^1.4",
+        "phpstan/phpstan": "^1.12 || ^2.0",
+        "phpstan/phpstan-phpunit": "^1.4 || ^2.0",
         "phpunit/phpunit": "^9.6.20 || ^10.5.30 || ^11.3.1"
     },
     "autoload": {
